# tanmatsu-thecube-grace

./: CLAUDE.md  CMakeLists.txt  Makefile  README.md
main/: hershey.h  hershey_font.h  main.c  main.h  renderer.c  renderer.h  texture_data.h  usb_device.c  usb_device.h
metadata/: metadata.json
